--- a/DocumentEditing/DocumentEditing/Views/Projects/AddUserToProject.cshtml
+++ b/DocumentEditing/DocumentEditing/Views/Projects/AddUserToProject.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <h4>Add registered user</h4>
+        <h4>Add user</h4>
         <form asp-action="AddUserToProject">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -27,7 +27,7 @@
         </form>
     </div>
 
-    <div class="col-md-4 offset-2">
+    @*<div class="col-md-4 offset-2">
         <h4>Send email with inviting</h4>
         <form asp-action="SendMessageToEmail">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -44,6 +44,7 @@
             </div>
         </form>
     </div>
+    *@
 </div>
 
 <div>
