--- a/DocumentEditing/DocumentEditing/Views/Projects/AddProject.cshtml
+++ b/DocumentEditing/DocumentEditing/Views/Projects/AddProject.cshtml
@@ -1,13 +1,9 @@
 ﻿@model DocumentEditing.ViewModels.AddProjectModel
-@using Microsoft.AspNetCore.Identity
-@using DocumentEditing.Areas.Identity.Data
 
 @{
     ViewData["Title"] = "AddProject";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-@inject UserManager<ApplicationUser> UserManager
 
 <h1>AddProject</h1>
 
@@ -17,9 +13,9 @@
         <form asp-action="AddProject" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group row">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="ProjectName" class="control-label"></label>
+                <input asp-for="ProjectName" class="form-control" />
+                <span asp-validation-for="ProjectName" class="text-danger"></span>
             </div>
 
             <div class="form-group row">
