--- a/DocumentEditing/DocumentEditing/Views/Projects/ViewProject.cshtml
+++ b/DocumentEditing/DocumentEditing/Views/Projects/ViewProject.cshtml
@@ -34,7 +34,7 @@
 
                         <label>Text</label>
                         <textarea required class="form-control" name="userText"></textarea>
-                        <input hidden value="@Model.Project.Id" name="projectId" />
+                        <input hidden asp-for="Project.Id" name="projectId" />
 
                     </div>
                     <div class="form-group">
