added custom authorization

--- a/DocumentEditing/DocumentEditing.Web/Views/Project/Index.cshtml
+++ b/DocumentEditing/DocumentEditing.Web/Views/Project/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model DocumentEditing.Domain.Contracts.ViewModels.ViewUserProjectsModel
+﻿@model DocumentEditing.Domain.Contracts.ViewModels.UserProjectsViewModel
+
 @{ 
     ViewData["Title"] = "Home Page";
 }
@@ -8,7 +9,7 @@
 
     <div class="row">
 
-        <a class="nav-link" style="font-size:20px"  asp-controller="Projects" asp-action="AddProject">Add Project</a>
+        <a class="nav-link" style="font-size:20px"  asp-controller="Project" asp-action="AddProject">Add Project</a>
 
     </div>
 
