--- a/DocumentEditing/DocumentEditing.Web/Views/Project/ViewProject.cshtml
+++ b/DocumentEditing/DocumentEditing.Web/Views/Project/ViewProject.cshtml
@@ -1,19 +1,16 @@
-﻿@model DocumentEditing.Domain.Contracts.ViewModels.ViewProjectModel
-
-
+﻿@model DocumentEditing.Domain.Contracts.ViewModels.ProjectViewModel
 
 @{
     var project = Model.Project;
     ViewData["Title"] = "EditProject";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div>
-    <h1>@Model.Project.Name</h1>
+    <h1>@project.Name</h1>
 </div>
 <div>
     <font>Last uploaded file:</font>
-    <a asp-action="DownloadFile" asp-route-fileId="@Model.Project.CurrentFile.Id">@Model.Project.CurrentFile.FileName</a>
+    <a asp-action="DownloadFile" asp-route-fileId="@project.CurrentFile.Id">@project.CurrentFile.FileName</a>
 </div>
 
 <div class="row">
@@ -25,7 +22,7 @@
 <div class="row col-md-12">
     <div class="col-md-9">
 
-        @if (!Model.Project.IsProjectFinished)
+        @if (!project.IsProjectFinished)
         {
             <h4>Send comment</h4>
             <div>
@@ -33,15 +30,15 @@
                     <div class="form-group">
 
                         <label>Text</label>
-                        <textarea required class="form-control" name="userText"></textarea>
-                        <input hidden asp-for="Project.Id" name="projectId" />
+                        <textarea required class="form-control" name="Text"></textarea>
+                        <input hidden asp-for="Project.Id" name="ProjectId" />
 
                     </div>
                     <div class="form-group">
-                        <label class="col-form-label">Attach file</label>                 
+                        <label class="col-form-label">Attach file</label>
                         <div class="custom-file">
 
-                            <input type="file" class="custom-file-input" name="attachedFile" />
+                            <input type="file" class="custom-file-input" name="AttachedFile" />
                             <label class="custom-file-label">Choose File...</label>
 
                         </div>
@@ -54,7 +51,7 @@
         }
         <div>
 
-            @if(Model.Project.IsProjectFinished)
+            @if (project.IsProjectFinished)
             {
                 <h3>Project is finished</h3>
             }
@@ -80,7 +77,7 @@
 
         <h5>Project Members</h5>
         <ul>
-            @foreach (var user in Model.Project.Visitors)
+            @foreach (var user in project.Visitors)
             {
                 <li>
                     @user.Email
@@ -94,7 +91,7 @@
                 <a class="btn btn-info" title="Add new member to project" asp-action="AddUserToProject" asp-route-projectId="@Model.Project.Id">Add member</a>
             </div>
 
-            @if (!Model.Project.IsProjectFinished)
+            @if (!project.IsProjectFinished)
             {
                 <h5 class="mt-5">Finish project</h5>
 
