--- a/DocumentEditing/DocumentEditing.Web/Views/Shared/_Layout.cshtml
+++ b/DocumentEditing/DocumentEditing.Web/Views/Shared/_Layout.cshtml
@@ -12,13 +12,13 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Projects" asp-action="Index">Collaborative document editing</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Project" asp-action="Index">Collaborative document editing</a>
 
-                <!--
+                
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial.cshtml" />
                 </div>
-                --->
+                
             </div>
         </nav>
     </header>
@@ -27,33 +27,7 @@
             @RenderBody()
         </main>
     </div>
-    <!--<header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DocumentEditing.Web</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Project" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            RenderBody()
-        </main>
-    </div>
-    -->
+
                 <footer class="border-top footer text-muted">
                     <div class="container">
                         &copy; 2021 - DocumentEditing.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
